# hebbi

./: .gitignore  ARCHITECTURE.md  Architecting Decentralized Intelligence_ Synthesizing Local Learning, Temporal Dynamics, and Continual Adaptation in Transformer-Based Paradigms.md  PAPER_SKETCH.md  TRAINING.md  pyproject.toml
hebbi/: common.py  data.py  local_learning.py  model.py
scripts/: chat.py  generate.py  run_pipeline.py  train.py  train_energy.py  train_memory.py  train_sft.py
